--- a/index.html
+++ b/index.html
@@ -58,22 +58,41 @@
     <hr>
     <section id="projects" class="third-section">
         <h2 class="title">Projetos</h2>
-        <div>
-            <div class="project">
+        <div class="project-card">
+            <br>
+            <div class="project-info">
                 <h3>Tela de Login (Netflix)</h3>
                 <br>
-                <p>Feita em HTML, CSS e JavaScript.</p>
-                <br>
+                <p style="color: black;">Feita em HTML, CSS e JavaScript.</p>
                 <div class="project-buttons">
-            <a href="https://github.com/FelipeBritoSP10/LoginNetflix?tab=readme-ov-file" class="btn btn-github">Repositório</a>
-            <br>
-            <br>
+                    <a href="https://github.com/FelipeBritoSP10/LoginNetflix?tab=readme-ov-file" class="btn btn-github">Repositório</a>
+                </div>
             </div>
-            </div>   
             <div class="project-image">
                 <a href="https://login-netflix-two.vercel.app">
-                <img src="netflix.png" alt="Tela de Login (Netflix)">
-                    <span class="image-hover-text">Ver Demonstração</span>
+                    <img src="netflix.png" alt="Tela de Login (Netflix)">
+                    <div class="overlay">
+                        <span class="image-hover-text">Ver Demonstração</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="project-card">
+            <br>
+            <div class="project-info">
+                <h3>Pepsi</h3>
+                <p>Landing page da Pepsi.</p>
+                <p style="color: black;">Feita em HTML, CSS e JavaScript.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/FelipeBritoSP10/PepsiBR" class="btn btn-github">Repositório</a>
+                </div>
+            </div>
+            <div class="project-image">
+            <a href="https://pepsi-felipe.vercel.app">
+            <img src="pepsi.jpg" alt="Pepsi">
+                    <div class="overlay">
+                        <span class="image-hover-text">Ver Demonstração</span>
+                    </div>
                 </a>
             </div>
         </div>
