--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
             </div>
         </div>
     </section>
+    <hr>
+    <section id="depoimentos" class="fourth-section">
+    <h2 class="title">Depoimentos</h2>
+    <div class="owl-carousel">
+    <div class="depoimentos">
+    <img src="usuário.jpg" alt="#">
+    <p><strong>Bernardo Nunes</strong></p>
+    <p>Bom, o Felipe Brito é um ótimo professor, e me ajudou muito no início da minha carreira. Eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade. Com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos. Se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</p>
+    </div>
+    </div>
+    </section>
+    
+    
+
+
     </main>
     <hr>
     <footer id="contact">
@@ -124,4 +139,6 @@
     <hr>
     </div>
     </footer>
+    <script src="moviment.js"></script>
 </body>
+</html>
