--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 <p><strong>Bernardo Nunes</strong></p>
 <p>Bom, o Felipe Brito é um ótimo professor, e me ajudou muito no início da minha carreira. Eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade. Com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos. Se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</p>
 </div>
+<div class="depoimentos">
+<img src="usuario2.jpg" alt="#">
+<p><strong>Mario Sergio</strong></p>
+<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</p>
+</div>
+</div>
 </div>
 </section>
     
