--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 <p><strong>Mario Sergio</strong></p>
 <p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</p>
 </div>
+<div class="depoimentos">
+<img src="usuario3.jpg" alt="#">
+<p><strong>Dayanny Siqueira</strong></p>
+<p>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</p>
+</div>
 </div>
 </div>
 </section>
