--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
 </div>
 </a>
 </div>
+<div class="project">
+<a href="https://github.com/FelipeBritoSP10/ProdutoNike">
+<img src="nike.jpg" alt="#">
+<div class="project-description">
+<p>Card da nike feito com HTML, CSS e JavScript.</p>
+<br>
+<a href="#" class="btn">Repositório</a>
+<br>
+<br>
+</div>
+</a>
+</div>
 </div>
 </section>
 <hr>
