--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <a href="https://github.com/FelipeBritoSP10/ProdutoNike">
 <img src="nike.jpg" alt="#">
 <div class="project-description">
-<p>Card da nike feito com HTML, CSS e JavScript.</p>
+<p>Card da nike feito com HTML, CSS e JavaScript.</p>
 <br>
 <a href="#" class="btn">Repositório</a>
 <br>
