--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 <link rel="stylesheet" href="estilo.css">
 <title>Felipe Brito | Portifólio</title>
 </head>
@@ -90,28 +91,42 @@
 </div>
 </section>
 <hr>
-<section id="depoimentos" class="fourth-section">
+<section id="depoimentos" class="fourth-section bg-custom">
 <h2 class="title">Depoimentos</h2>
-<div class="owl-carousel">
-<div class="depoimentos">
-<img src="usuário.jpg" alt="#">
-<p><strong>Bernardo Nunes</strong></p>
-<p>Bom, o Felipe Brito é um ótimo professor, e me ajudou muito no início da minha carreira. Eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade. Com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos. Se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</p>
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 bg-custom dark:bg-custom">
+<figcaption class="flex items-center justify-center">
+<figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
+<img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuário.jpg" alt="profile picture">
+<div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
+<div><b>Bernardo Nunes</b></div>
 </div>
-<div class="depoimentos">
-<img src="usuario2.jpg" alt="#">
-<p><strong>Mario Sergio</strong></p>
-<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</p>
+<blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+<p class="my-4"><b>Bom, o Felipe Brito foi um ótimo professor, e me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</b></p>
+</blockquote>
+</figure>
+</figcaption>
+<figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
+<img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario2.jpg" alt="profile picture">
+<div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
+<div><b>Mario Sergio</b></div>
 </div>
-<div class="depoimentos">
-<img src="usuario3.jpg" alt="#">
-<p><strong>Dayanny Siqueira</strong></p>
-<p>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</p>
+<blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+<p class="my-4"><b>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</b></p>
+</blockquote>
+</figure>
+</figcaption>
+<figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
+<img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario3.jpg" alt="profile picture">
+<div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
+<div><b>Dayanny Siqueira</b></div>
 </div>
-</div>
+<blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+<p class="my-4"><b>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</b></p>
+</blockquote>
+</figure>
+</figcaption>
 </div>
 </section>
-    
 </main>
 <hr>
 <footer id="contact">
