--- a/index.html
+++ b/index.html
@@ -108,7 +108,41 @@
 </div>
 </a>
 </div>
+<div class="project">
+<a href="https://github.com/FelipeBritoSP10/CocaCola?tab=readme-ov-file">
+<img src="cocacola.png" alt="#">
+<div class="project-description">
+<p>Landing page da coca cola feito com HTML e CSS.</p>
+<br>
+<a href="#" class="btn">Repositório</a>
+<br>
+<br>
 </div>
+</a>
+</div>
+<div class="project">
+<a href="https://github.com/FelipeBritoSP10/MCDonald">
+<img src="mcdonald.png" alt="#">
+<div class="project-description">
+<p>Landing page do mc donald feito com HTML e CSS.</p>
+<br>
+<a href="#" class="btn">Repositório</a>
+<br>
+<br>
+</div>
+</a>
+</div>
+<div class="project">
+    <a href="https://github.com/FelipeBritoSP10/MCDonald">
+    <img src="teladelogin.png" alt="#">
+    <div class="project-description">
+    <p>Tela de login com validações feita com HTML, CSS, JavaScript e BootStrap.</p>
+    <br>
+    <a href="#" class="btn">Repositório</a>
+    <br>
+    <br>
+    </div>
+    </a>
 </section>
 <hr>
 <section id="depoimentos" class="fourth-section bg-custom">
