--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 <title>Felipe Brito | Portifólio</title>
 </head>
 <body>
-<header>
+<header class="flex justify-between items-center py-4">
 <div class="box-img-header">
 <img src="logo.png" alt="#">
 </div>
     
-<nav>
+<button id="menu-toggle" class="md:hidden focus:outline-none">
+<svg class="h-8 w-8 fill-current text-white" viewBox="0 0 24 24">
+<path d="M2 6h20M2 12h20M2 18h20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+</button>
+    
+<nav id="menu" class="hidden md:flex md:items-center md:space-x-4">
 <a href="#experiences" class="nav-links">Experiências</a>
 <a href="#who-am-i" class="nav-links">Quem sou eu</a>
 <a href="#contact" class="nav-links">Contato</a>
@@ -57,7 +63,7 @@
     <div class="max-w-lg rounded overflow-hidden border-4 border-white shadow-lg mx-auto">
       <div class="px-6 py-4">
         <div class="font-bold text-white text-center text-xl mb-2">Felipe Brito</div>
-        <p class="text-gray-700 text-base">
+        <p class="text-gray-700 font-bold text-2x1 text-base">
           Sou um  programador front-end atualmente empregado na renomada empresa Arthais Systems. <br>
           <br>
           No ambiente dinâmico da Arthais, participo de projetos desafiadores, contribuindo com soluções criativas e eficientes. Com o uso do React JS, desenvolvo aplicações web de alto desempenho e utilizo o BootStrap para garantir uma experiência consistente em todos os dispositivos. <br>   
@@ -155,7 +161,7 @@
     <div><b>Bernardo Nunes</b></div>
     </div>
     <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4"><b>Bom, o Felipe Brito foi um ótimo professor, e me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</b></p>
+    <p class="my-4 font-bold text-xl"><b>Bom, o Felipe Brito foi um ótimo professor, e me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</b></p>
     </blockquote>
     </figure>
     </figcaption>
@@ -165,7 +171,7 @@
     <div><b>Mario Sergio</b></div>
     </div>
     <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4"><b>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</b></p>
+    <p class="my-4 font-bold text-xl"><b>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</b></p>
     </blockquote>
     </figure>
     </figcaption>
@@ -175,7 +181,7 @@
     <div><b>Dayanny Siqueira</b></div>
     </div>
     <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4"><b>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</b></p>
+    <p class="my-4 font-bold text-xl"><b>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</b></p>
     </blockquote>
     </figure>
     </figcaption>
@@ -184,8 +190,8 @@
     <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
     <div><b>Jorge Nascimento</b></div>
     </div>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4"><b>Profissional competente e, acima de tudo, habilidoso. Possui raciocínio preciso, cirúrgico, ao criar um código. Uma honra trabalhar com o Felipe.</b></p>
+    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-700">
+    <p class="my-4 font-bold text-xl"><b>Profissional competente e, acima de tudo, habilidoso. Possui raciocínio preciso, cirúrgico, ao criar um código. Uma honra trabalhar com o Felipe.</b></p>
     </blockquote>
     </figure>
     </figcaption>
