--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
 <hr>
 </div>
 </footer>
-    
+<center>
+<p style="color: white; font-size: 18px;">&copy; 2024 Felipe Brito. Todos os direitos reservados.</p>
+</center>
 <script src="moviment.js"></script>
 </body>
 </html>
