--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,6 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
 <link rel="stylesheet" href="estilo.css">
 <title>Felipe Brito | Portifólio</title>
 </head>
@@ -88,126 +94,144 @@
 <hr>
     
 <section id="projects" class="third-section">
-<h2 class="title">Projetos</h2>
-<div class="project-grid">
-<div class="project">
-<a href="https://github.com/FelipeBritoSP10/LoginNetflix">
-<img src="netflix.png" alt="#">
-<div class="project-description">
-<p>Tela de login da Netflix feita com HTML, CSS e JavaScript.</p>
-<br>
-<a href="#" class="btn">Repositório</a>
-<br>
-<br>
-</div>
-</a>
-</div>
-<div class="project">
-<a href="https://github.com/FelipeBritoSP10/ProdutoNike">
-<img src="nike.jpg" alt="#">
-<div class="project-description">
-<p>Card da nike feito com HTML, CSS e JavaScript.</p>
-<br>
-<a href="#" class="btn">Repositório</a>
-<br>
-<br>
-</div>
-</a>
-</div>
-<div class="project">
-<a href="https://github.com/FelipeBritoSP10/CocaCola?tab=readme-ov-file">
-<img src="cocacola.png" alt="#">
-<div class="project-description">
-<p>Landing page da coca cola feito com HTML e CSS.</p>
-<br>
-<a href="#" class="btn">Repositório</a>
-<br>
-<br>
-</div>
-</a>
-</div>
-<div class="project">
-<a href="https://github.com/FelipeBritoSP10/MCDonald">
-<img src="mcdonald.png" alt="#">
-<div class="project-description">
-<p>Landing page do mc donald feito com HTML e CSS.</p>
-<br>
-<a href="#" class="btn">Repositório</a>
-<br>
-<br>
-</div>
-</a>
-</div>
-<div class="project">
-    <a href="https://github.com/FelipeBritoSP10/Login">
-    <img src="teladelogin.png" alt="#">
-    <div class="project-description">
-    <p>Tela de login com validações feita com HTML, CSS, JavaScript e BootStrap.</p>
-    <br>
-    <a href="#" class="btn">Repositório</a>
-    <br>
-    <br>
-    </div>
-    </a>
-    </div>
-</section>
-<hr>
+  <h2 class="title">Projetos</h2>
+  <div class="owl-carousel owl-theme project-grid">
+  <div class="item">
+  <div class="project">
+  <a href="https://github.com/FelipeBritoSP10/LoginNetflix">
+  <img src="netflix.png" alt="#">
+  <div class="project-description">
+  <p>Tela de Login da Netflix feita com HTML, CSS.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a>
+  <br>
+  <br>
+  </div>
+  </a>
+  </div>
+  </div>
+  <div class="item">
+  <div class="project">
+  <a href="https://github.com/FelipeBritoSP10/ProdutoNike">
+  <img src="nike.jpg" alt="#">
+  <div class="project-description">
+  <p>Card da nike feito com HTML, CSS e JavaScript.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a>
+  <br>
+  <br>
+  </div>
+  </a>
+  </div>
+  </div>
+  <div class="item">
+  <div class="project">
+  <a href="https://github.com/FelipeBritoSP10/CocaCola?tab=readme-ov-file">
+  <img src="cocacola.png" alt="#">
+  <div class="project-description">
+  <p>Landing Page da Coca Cola feita com HTML e CSS.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a>
+  <br>
+  <br>
+  </div>
+  </a>
+  </div>
+  </div>
+  <div class="item">
+  <div class="project">
+  <a href="https://github.com/FelipeBritoSP10/Login">
+  <img src="teladelogin.png" alt="#">
+  <div class="project-description">
+  <p>Tela de Login com validações feita com HTML, CSS, JavaScript e BootStrap.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a> 
+  <br>
+  <br> 
+  </div>
+  </a>
+  </div>
+  </div>
+  <div class="item">
+  <div class="project">
+  <a href="https://github.com/FelipeBritoSP10/PizzariaBrito?tab=readme-ov-file">
+  <img src="pizzaria.jpg" alt="#">
+  <div class="project-description">
+  <p>Site de pizzaria feito com HTML, CSS e JavaScript.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a>
+  <br>
+  <br>  
+  </div>
+  </a>
+  </div>
+  </div>
+  <div class="item">
+  <div class="project">
+  <a href="">
+  <img src="mcdonald.png" alt="#">
+  <div class="project-description">
+  <p>Landing Page do MC Donald feita com HTML e CSS.</p>
+  <br>
+  <a href="#" class="btn">Repositório</a>
+  <br>
+  <br>
+  </div> 
+  </a>
+  </div>
+  </div>
+  </div>
+  </section>
+  <hr>
 <section id="depoimentos" class="fourth-section bg-custom">
-    <h2 class="title">Depoimentos</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 bg-custom dark:bg-custom">
-    <figcaption class="flex items-center justify-center">
-    <figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
-    <img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuário.jpg" alt="profile picture">
-    <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
-    <div><b>Bernardo Nunes</b></div>
-    </div>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4 font-bold text-xl"><b>Bom, o Felipe Brito foi um ótimo professor, e me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</b></p>
-    </blockquote>
-    </figure>
-    </figcaption>
-    <figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
-    <img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario2.jpg" alt="profile picture">
-    <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
-    <div><b>Mario Sergio</b></div>
-    </div>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4 font-bold text-xl"><b>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</b></p>
-    </blockquote>
-    </figure>
-    </figcaption>
-    <figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
-    <img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario3.jpg" alt="profile picture">
-    <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
-    <div><b>Dayanny Siqueira</b></div>
-    </div>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-    <p class="my-4 font-bold text-xl"><b>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</b></p>
-    </blockquote>
-    </figure>
-    </figcaption>
-    <figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
-    <img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario4.jpg" alt="profile picture">
-    <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
-    <div><b>Jorge Nascimento</b></div>
-    </div>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-700">
-    <p class="my-4 font-bold text-xl"><b>Profissional competente e, acima de tudo, habilidoso. Possui raciocínio preciso, cirúrgico, ao criar um código. Uma honra trabalhar com o Felipe.</b></p>
-    </blockquote>
-    </figure>
-    </figcaption>
-    <figure class="flex flex-col items-center justify-center p-8 text-center bg-custom border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-l-lg md:border-e dark:bg-custom dark:border-gray-700">
-      <img class="rounded-full w-20 h-20 mb-4 hover:scale-110 transition-transform duration-300 mb-2 user-img" src="usuario5.jpg" alt="profile picture">
-      <div class="space-y-0.5 font-medium text-white dark:text-dark text-left rtl:text-right ms-3" style="font-family: georgia, sans-serif; font-size: 19px;">
-      <div><b>Enzo Sevilhano</b></div>
-      </div>
-      <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-700">
-      <p class="my-4 font-bold text-xl"><b>O Felipe sem dúvidas tem o dom de explicar, eu  não sabia nada de HTML e CSS e tudo que parecia difícil ele fez ser fácil e, sem dúvidas me ajudou na escolha de que área da tecnologia seguir.</b></p>
-      </blockquote>
-      </figure>
-      </figcaption>
-    </div>
-    </section>
+<h2 class="title">Depoimentos</h2>
+<div class="owl-carousel owl-theme depoimentos-carousel">
+<div class="item">
+<div class="depoimento">
+<img src="usuário.jpg" alt="#">
+<p class="nome-usuario">Bernardo Nunes</p>
+<div class="depoimento-description">
+<p>Um ótimo professor, me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</p>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="depoimento">
+<img src="usuario2.jpg" alt="#">
+<p class="nome-usuario">Mario Sergio</p>
+<div class="depoimento-description">
+<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</p>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="depoimento">
+<img src="usuario3.jpg" alt="#">
+<p class="nome-usuario">Dayanny Siqueira</p>
+<div class="depoimento-description">
+<p>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</p>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="depoimento">
+<img src="usuario4.jpg" alt="#">
+<p class="nome-usuario">Jorge Nascimento</p>
+<div class="depoimento-description">
+<p>Profissional competente e, acima de tudo, habilidoso. Possui raciocínio preciso, cirúrgico, ao criar um código. Uma honra trabalhar com o Felipe.</p>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="depoimento">
+<img src="usuario5.jpg" alt="#">
+<p class="nome-usuario">Enzo Sevilhano</p>
+<div class="depoimento-description">
+<p>O Felipe sem dúvidas tem o dom de explicar, eu  não sabia nada de HTML e CSS e tudo que parecia difícil ele fez ser fácil e, sem dúvidas me ajudou na escolha de que área da tecnologia seguir.</p>
+</div>
+</div>
+</div>
+</section>
 </main>
 <hr>
 <footer id="contact">
