--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -63,7 +62,43 @@
 </div>
 </section>
 <hr>
-    
+
+<div class="services" id="services">
+  <div class="service_title">
+      <h2>Serviços</h2>
+  </div>
+  <div class="servs">
+      <div class="service">
+          <div class="service_content">
+              <i class="fas fa-code"></i>
+              <p>Criação de sites</p>
+          </div>
+      </div>
+      <br>
+      <div class="service">
+          <div class="service_content">
+              <i class="fas fa-paint-brush"></i>
+              <p>UI Designer</p>
+          </div>
+      </div>
+      <br>
+      <div class="service">
+          <div class="service_content">
+              <i class="fas fa-mobile-alt"></i>
+              <p>Sites Responsivos</p>
+          </div>
+      </div>
+      <br>
+      <div class="service">
+          <div class="service_content">
+              <i class="fas fa-chalkboard-teacher"></i>
+              <p>Aulas</p>
+          </div>
+      </div>
+      <br>
+  </div>
+</div>
+  <hr>
 <section id="who-am-i" class="third-section bg-site-color sr">
     <h2 class="title text-center mb-8">Quem sou eu?</h2>
     <div class="max-w-lg rounded overflow-hidden border-4 border-white shadow-lg mx-auto">
