Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 <img src="usuario6.jpg" alt="#">
 <p class="nome-usuario">Dolores Oliveira</p>
 <div class="depoimento-description">
-<p>Seu compromisso com a excelência e sua capacidade de superar desafios são verdadeiramente admirável uma pessoa incrível! Um 
-  programador, que posso dizer com toda clareza possui resolução de problemas, pensamento lógico e capacidade de aprender novas tecnologias. Além de possuí, habilidades de comunicação, trabalho em equipe e capacidade de lidar com prazos. Estudar teoria e buscar oportunidades de aprendizado.
+<p>Felipe, seu compromisso com a excelência e sua capacidade de superar desafios são verdadeiramente admirável uma pessoa incrível! Um 
+  programador, que posso dizer com toda clareza possui resolução de problemas, pensamento lógico e capacidade de aprender novas tecnologias. Além de possuir habilidades de comunicação, trabalho em equipe e capacidade de lidar com prazos. Estudar teoria e buscar oportunidades de aprendizado.
   Uma honra trabalhar com você!</p>
 </div>
 </div>
