--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Feito com HTML e CSS</p>
 <img src="usuario2.jpg" alt="#">
 <p class="nome-usuario">Mario Sergio</p>
 <div class="depoimento-description">
-<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria uma ótimo parceiro de negócios!</p>
+<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria um ótimo parceiro de negócios!</p>
 </div>
 </div>
 </div>
@@ -285,7 +285,7 @@ Feito com HTML e CSS</p>
 <p class="nome-usuario">Dolores Oliveira</p>
 <div class="depoimento-description">
 <p>Seu compromisso com a excelência e sua capacidade de superar desafios são verdadeiramente admirável uma pessoa incrível! Um 
-  programador, que posso dizer com toda clareza possui resolução de problemas, pensamento lógico e capacidade de aprender novas tecnologias. Além de possuí, habilidades de comunicação, trabalho em equipe e capacidade de lidar com prazos. Estudar teoria e buscar oportunidades de aprendizado.
+  programador, que posso dizer com toda clareza possui resolução de problemas, pensamento lógico e capacidade de aprender novas tecnologias. Além de possuir, habilidades de comunicação, trabalho em equipe e capacidade de lidar com prazos. Estudar teoria e buscar oportunidades de aprendizado.
   Uma honra trabalhar com você!</p>
 </div>
 </div>
