--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main>
 <section class="first-section">
 <div>
-<h1><span style="font-size: 24px;">Olá! Eu sou o</span><br><strong style="font-size: 98px; color: #4e8cff;">Felipe Brito</strong></h1>    
+<h1><span style="font-size: 24px;">Olá!! Eu sou o</span><br><strong style="font-size: 98px; color: #4e8cff;">Felipe Brito</strong></h1>    
 <p><strong>Minha trajetória profissional é pautada por uma incessante busca por inovação, pelo aprimoramento contínuo de habilidades e pela dedicação incansável à criação de soluções singulares.</strong></p>
 <a href="#contact" class="btn-action link-action">Saber mais</a>
 </div>
