--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 </section>
     
 <hr>
+
+<section id="aulas" class="fourth-section sr">
+<h2 class="title">Aulas de Programação</h2>
+<p>Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
+<p>Confira meu site de aulas de programação: <a href="https://programacaocursos.vercel.app" target="_blank">Aulas</a></p>
+</section>
     
 <section id="projects" class="third-section sr">
 <h2 class="title">Projetos</h2>
