--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 
 <section id="aulas" class="fourth-section sr">
 <h2 class="title">Aulas de Programação</h2>
-<p class="text-white-700 font-bold text-2x1 text-base">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
-<p class="text-white-700 font-bold text-2x1 text-base">Confira meu site de aulas de programação: 
-<br><a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Aulas</a></p>
+<a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Aulas</a>
 </section>
     
 <section id="projects" class="third-section sr">
