--- a/index.html
+++ b/index.html
@@ -130,10 +130,13 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <hr>
 
 <section id="aulas" class="fourth-section sr">
-<h2 class="title">Aulas de Programação</h2>
+<div class="bg-white shadow-md rounded-lg p-6">
+<h2 class="text-2xl font-bold mb-4">Aulas de Programação</h2>
+<p class="text-white-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
 <a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Aulas</a>
+</div>
 </section>
-    
+
 <section id="projects" class="third-section sr">
 <h2 class="title">Projetos</h2>
 <div class="owl-carousel owl-theme project-grid">
