--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 
 <section id="aulas" class="fourth-section sr">
 <div class="bg-white shadow-md rounded-lg p-6">
-<h2 class="text-2xl font-bold mb-4">Aulas de Programação</h2>
+<h2 class="text-2xl font-bold mb-4">Aulas</h2>
 <p class="text-white-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
 <div class="flex justify-center">
 <a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Aulas</a>
