--- a/index.html
+++ b/index.html
@@ -130,15 +130,17 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <hr>
 
 <section id="aulas" class="fourth-section sr">
-<div class="bg-white shadow-md rounded-lg p-6">
+<div class="bg-white shadow-lg rounded-lg overflow-hidden">
+<div class="p-6">
 <h2 class="text-2xl font-bold mb-4">Aulas</h2>
-<p class="text-white-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
+<p class="text-gray-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
 <div class="flex justify-center">
-<a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Aulas</a>
+<a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out">Saiba mais</a>
+</div>
 </div>
 </div>
 </section>
-
+    
 <section id="projects" class="third-section sr">
 <h2 class="title">Projetos</h2>
 <div class="owl-carousel owl-theme project-grid">
