--- a/index.html
+++ b/index.html
@@ -130,15 +130,34 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <hr>
 
 <section id="aulas" class="fourth-section sr">
-<div class="bg-white shadow-lg rounded-lg overflow-hidden">
-<div class="p-6">
-<h2 class="text-2xl font-bold mb-4">Aulas</h2>
-<p class="text-gray-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
-<div class="flex justify-center">
-<a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out">Saiba mais</a>
-</div>
-</div>
-</div>
+  <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+    <div class="p-6">
+      <h2 class="text-2xl font-bold mb-4">Aulas</h2>
+      <p class="text-gray-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
+      <div class="carousel">
+        <div class="carousel-inner">
+          <!-- Slide 1 -->
+          <div class="carousel-slide">
+            <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
+            <p class="text-gray-700">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
+          </div>
+          <!-- Slide 2 -->
+          <div class="carousel-slide">
+            <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
+            <p class="text-gray-700">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
+          </div>
+          <!-- Slide 3 -->
+          <div class="carousel-slide">
+            <h3 class="text-lg font-bold mb-2">Projetos Práticos</h3>
+            <p class="text-gray-700">Coloque seus conhecimentos em prática desenvolvendo projetos reais.</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out">Saiba mais</a>
+      </div>
+    </div>
+  </div>
 </section>
     
 <section id="projects" class="third-section sr">
