--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="estilo.css">
 <title>Felipe Brito | Portifólio</title>
 </head>
@@ -134,24 +135,24 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
     <div class="p-6">
       <h2 class="text-2xl font-bold mb-4">Aulas</h2>
       <p class="text-gray-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
-      <div class="carousel">
-        <div class="carousel-inner">
-          <!-- Slide 1 -->
-          <div class="carousel-slide">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
             <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
             <p class="text-gray-700">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
           </div>
-          <!-- Slide 2 -->
-          <div class="carousel-slide">
+          <div class="swiper-slide">
             <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
             <p class="text-gray-700">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
           </div>
-          <!-- Slide 3 -->
-          <div class="carousel-slide">
+         
+          <div class="swiper-slide">
             <h3 class="text-lg font-bold mb-2">Projetos Práticos</h3>
             <p class="text-gray-700">Coloque seus conhecimentos em prática desenvolvendo projetos reais.</p>
           </div>
         </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
       <div class="flex justify-center">
         <a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out">Saiba mais</a>
