--- a/index.html
+++ b/index.html
@@ -133,31 +133,38 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <section id="aulas" class="fourth-section sr">
   <div class="bg-white shadow-lg rounded-lg overflow-hidden">
     <div class="p-6">
-      <h2 class="text-2xl font-bold mb-4">Aulas</h2>
-      <p class="text-gray-700 mb-4">Aqui você pode encontrar informações sobre as minhas aulas de programação.</p>
+      <h2 class="text-2xl font-bold mb-4">Aulas de Programação</h2>
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <!-- Slide 1 -->
-          <div class="swiper-slide">
+          <div class="swiper-slide bg-gray-100 rounded-lg p-6">
             <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
             <p class="text-gray-700">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
           </div>
           <!-- Slide 2 -->
-          <div class="swiper-slide">
+          <div class="swiper-slide bg-gray-100 rounded-lg p-6">
             <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
             <p class="text-gray-700">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
           </div>
           <!-- Slide 3 -->
-          <div class="swiper-slide">
+          <div class="swiper-slide bg-gray-100 rounded-lg p-6">
             <h3 class="text-lg font-bold mb-2">Projetos Práticos</h3>
             <p class="text-gray-700">Coloque seus conhecimentos em prática desenvolvendo projetos reais.</p>
           </div>
         </div>
         <!-- Adicione os botões de navegação -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev bg-gray-200 hover:bg-gray-300 rounded-full h-10 w-10 flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+          </svg>
+        </div>
+        <div class="swiper-button-next bg-gray-200 hover:bg-gray-300 rounded-full h-10 w-10 flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
+          </svg>
+        </div>
       </div>
-      <div class="flex justify-center">
+      <div class="flex justify-center mt-4">
         <a href="https://programacaocursos.vercel.app" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out">Saiba mais</a>
       </div>
     </div>
