--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <hr>
 
 <section id="aulas" class="third-section sr">
-  <h2 class="title">Aulas de Programação</h2>
+  <h2 class="title text-center mb-8">Aulas de Programação</h2>
   <div class="owl-carousel owl-theme project-grid">
-    <div class="item">
+    <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
           <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
-          <p>Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
+          <p class="text-white-700">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
         </div>
       </div>
     </div>
-    <div class="item">
+    <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
           <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
-          <p>Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
+          <p class="text-white-700">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
         </div>
       </div>
     </div>
