--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-          <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
-          <p class="text-white-700">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
+            <h3 class="text-lg font-bold mb-2 text-gray-800">Introdução à Programação</h3>
+           <p class="text-black">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
         </div>
       </div>
     </div>
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-          <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
-          <p class="text-white-700">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
+            <h3 class="text-lg font-bold mb-2 text-gray-800">Desenvolvimento Web</h3>
+         <p class="text-black">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
         </div>
       </div>
     </div>
