--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <hr>
 
 <section id="aulas" class="third-section sr">
-  <h2 class="title text-center mb-8">Aulas de Programação</h2>
+  <h2 class="title text-center mb-8 text-black">Aulas de Programação</h2>
   <div class="owl-carousel owl-theme project-grid">
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-            <h3 class="text-lg font-bold mb-2 text-gray-800">Introdução à Programação</h3>
-           <p class="text-black">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
+          <h3 class="text-lg font-bold mb-2 text-gray-800">Introdução à Programação</h3>
+          <p class="text-black">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
         </div>
       </div>
     </div>
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-            <h3 class="text-lg font-bold mb-2 text-gray-800">Desenvolvimento Web</h3>
-         <p class="text-black">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
+          <h3 class="text-lg font-bold mb-2 text-gray-800">Desenvolvimento Web</h3>
+          <p class="text-black">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
         </div>
       </div>
     </div>
