--- a/index.html
+++ b/index.html
@@ -133,22 +133,25 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 <section id="aulas" class="third-section sr">
   <h2 class="title text-center mb-8 text-black">Aulas de Programação</h2>
   <div class="owl-carousel owl-theme project-grid">
+    <!-- Aula 1 -->
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-          <h3 class="text-lg font-bold mb-2 text-gray-800">Introdução à Programação</h3>
+          <h3 class="text-lg font-bold mb-2 text-black">Introdução à Programação</h3>
           <p class="text-black">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
         </div>
       </div>
     </div>
+    <!-- Aula 2 -->
     <div class="item bg-gray-100 p-4 rounded-lg">
       <div class="project">
         <div class="project-description">
-          <h3 class="text-lg font-bold mb-2 text-gray-800">Desenvolvimento Web</h3>
+          <h3 class="text-lg font-bold mb-2 text-black">Desenvolvimento Web</h3>
           <p class="text-black">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
         </div>
       </div>
     </div>
+    <!-- Outras aulas aqui... -->
   </div>
 </section>
     
